update vuejs loading time bug
update when vue.js hasn't excute showing template bug by cover the page
by loading turning egg(default class)

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -526,7 +526,7 @@ hr
         z-index: 301
         color: $color_black
         padding: 35px
-        margin-top: 45px
+        margin-top: 35px
         font-size: $para_size*1.2
         
     
@@ -1700,7 +1700,8 @@ hr
   
 
 @media screen and (max-width: $break_small)
-  
+  #index_nav
+    display: none
   .normal_nav
     width: 100vw
     height: 100vh
